force-app/main/default/objects/Encuestas__c/Encuestas__c.object-meta.xml
<CustomObject>
    <label>EncuestaCFB</label>
    <nameField>
        <displayFormat>Encuesta-{000000000}</displayFormat>
        <label>Encuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EncuestasCFB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>