force-app/main/default/objects/Encuestas__c/fields/Date_Land__c.field-meta.xml
<CustomField>
    <fullName>Date_Land__c</fullName>
    <label>Date Land</label>
    <length>255</length>
    <type>Text</type>
</CustomField>