force-app/main/default/objects/Encuestas__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <label>Form ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>