force-app/main/default/objects/Encuestas__c/fields/other__c.field-meta.xml
<CustomField>
    <fullName>other__c</fullName>
    <label>other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>