force-app/main/default/objects/Encuestas__c/fields/Referer__c.field-meta.xml
<CustomField>
    <fullName>Referer__c</fullName>
    <label>Referer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>