force-app/main/default/objects/Encuestas__c/fields/Response_10__c.field-meta.xml
<CustomField>
    <fullName>Response_10__c</fullName>
    <label>Response 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>