force-app/main/default/objects/Encuestas__c/fields/Response_11__c.field-meta.xml
<CustomField>
    <fullName>Response_11__c</fullName>
    <label>Response 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>