force-app/main/default/objects/Encuestas__c/fields/Response_12__c.field-meta.xml
<CustomField>
    <fullName>Response_12__c</fullName>
    <label>Response 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>