force-app/main/default/objects/Encuestas__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <label>Submit Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>