force-app/main/default/objects/Encuestas__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <label>Survey ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>